--- a/goodsclass/index/index.wxml
+++ b/goodsclass/index/index.wxml
@@ -8,12 +8,12 @@
 
 <view wx:for="{{class}}">
      <view class="class2 nav1">
-              <navigator  url="/goodsclass/index/list?id={{item.id}}" hover-class="navigator-hover">
+          <navigator  url="/goodsclass/index/list?id={{item.id}}&level={{item.level}}&p=0" hover-class="navigator-hover">
                 <text>{{item.name}}</text>
               </navigator>
               <view class="class3">
                   <view wx:for="{{item.class3}}">
-                    <navigator  url="/goodsclass/index/list?id={{item.id}}" hover-class="navigator-hover">
+                    <navigator  url="/goodsclass/index/list?id={{item.id}}&level={{item.level}}&p=0" hover-class="navigator-hover">
                         <text>{{item.name}}</text>
                     </navigator>
                   </view>
