--- a/goodsclass/index/list.wxml
+++ b/goodsclass/index/list.wxml
@@ -1,16 +1,17 @@
 <include src="../../public/header" />
-<view class="goodslist">
-<navigator  url="/goodsclass/index/list?id={{item.id}}" hover-class="navigator-hover">
+<block wx:if="{{goodslist.length > 0}}">
+<view class="goodslist" wx:for="{{goodslist}}">
+<navigator  url="/goodsclass/index/goodsinfo?id={{item.goods_id}}" hover-class="navigator-hover">
         <view class="goods">
           <view class="image">
-              <image src="http://www.yundi88.com/Public/upload/goods/thumb/6318/goods_thumb_6318_420_420.jpeg" mode="aspectFit"></image>
+              <image src="http://www.yundi88.com{{item.original_img}}" mode="aspectFit"></image>
           </view>
             
             <view class="goodscon">
-                  <text class="title">标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题</text>
-                  <text style="color:#999">广州云狄网络科技有限公司</text>
+                  <text class="title">{{item.goods_name}}</text>
+                  <text style="color:#999">{{item.store_name}}</text>
                   <view class="price">
-                    <text>￥125.00</text>
+                    <text>￥{{item.shop_price}}</text>
                     <view class="rengzheng">
                         <image style="float:right;width:18%;" src="http://localhost:8080/xiaochengxu/yunshanghui.png" mode="widthFix"></image>
                         <image style="float:right;"  src="http://localhost:8080/xiaochengxu/rengzheng.png" mode="widthFix"></image>
@@ -20,4 +21,8 @@
         </view>
 </navigator>
 </view>
+</block>
+<block  wx:if="{{status}}">
+ <text class="empty">{{msg}}</text>  
+</block>
 <include src="../../public/footer" />
